--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,9 @@ langchain-openai>=0.1.17
 langchain-chroma>=0.1.2
 langchain-community>=0.1.14
 langchain-text-splitters>=0.1.7
+langchain-google-genai>=0.1.0
+langchain-google-vertexai>=0.1.3
+langgraph>=0.1.6
 
 # Data modeling
 pydantic>=2.8.2
