--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ langchain-text-splitters>=0.1.7
 langchain-google-genai>=0.1.0
 langchain-google-vertexai>=0.1.3
 langgraph>=0.1.6
+langchain-ollama>=0.1.0
 
 # Data modeling
 pydantic>=2.8.2
